--- a/src/css/Textarea.module.css
+++ b/src/css/Textarea.module.css
@@ -1,15 +1,16 @@
 
 .button{
     border: 2px solid #99a1af;
+    background-color: #99a1af;
     padding: 5px 20px;
-    border-radius: 20px;
+    border-radius: 5px;
     font-weight:bold;
-    color: #99a1af;
+    color: white;
     min-width: 150px;
 
 }
 .button:hover{
-    color: white;
-    background-color: #99a1af;
+    color: #99a1af;
+    background-color: white;
     border-color: #99a1af;
 }
