--- a/src/css/Textarea.module.css
+++ b/src/css/Textarea.module.css
@@ -14,3 +14,10 @@
     background-color: white;
     border-color: #99a1af;
 }
+@media (max-width:700px){
+    .button{
+        min-width: 70px;
+        padding: 3px 5px;
+        font-size: 10px;
+    }
+}
